--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:27.0.2'
     compile 'com.google.android.gms:play-services:11.8.0'
     compile 'com.google.firebase:firebase-auth:11.8.0'
     testCompile 'junit:junit:4.12'
