--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,11 +34,14 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:27.0.2'
+    compile 'com.android.support:design:26.1.0'
     compile 'com.google.android.gms:play-services:11.8.0'
     compile 'com.google.android.gms:play-services-maps:11.8.0'
     compile 'com.google.firebase:firebase-auth:11.8.0'
     testCompile 'junit:junit:4.12'
+    compile 'agency.tango.android:material-intro-screen:0.0.5'
+    compile 'gr.pantrif:easy-android-splash-screen:0.0.1'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
