--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.shakt.baked"
+        multiDexEnabled true
         minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
@@ -33,14 +34,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.google.android.gms:play-services:11.8.0'
-    compile 'com.google.android.gms:play-services-maps:11.8.0'
-    compile 'com.google.firebase:firebase-auth:11.8.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.google.android.gms:play-services:11.8.0'
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation 'com.google.firebase:firebase-auth:11.8.0'
     testCompile 'junit:junit:4.12'
-    compile 'agency.tango.android:material-intro-screen:0.0.5'
-    compile 'gr.pantrif:easy-android-splash-screen:0.0.1'
+    implementation 'agency.tango.android:material-intro-screen:0.0.5'
+    implementation 'gr.pantrif:easy-android-splash-screen:0.0.1'
 
 
 }
