Recommendation Activity layout and classes fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,26 +33,28 @@
             android:value="@string/google_maps_key" />
 
         <activity android:name=".MainActivity" />
-        <activity android:name=".HomeActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".HomeActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MapActivity"
             android:label="Go Back"
             android:parentActivityName=".HomeActivity"
             android:theme="@style/AppTheme" />
         <activity android:name=".SplashScreenActivity">
+
+
+        </activity>
+        <activity android:name=".IntroActivity" />
+        <activity android:name=".RecommendationActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".IntroActivity" />
-        <activity
-            android:name=".InfoActivity"
-            android:parentActivityName=".HomeActivity"
-            android:label="Back"
-            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
