Link to user account activity from home page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name=".IntroActivity" />
 
         <activity android:name= ".UserAccount"
+            android:parentActivityName=".HomeActivity"
             android:theme = "@style/Theme.AppCompat.Light.NoActionBar"
             >
 
