--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,9 @@ allprojects {
     repositories {
         maven {
             url "https://maven.google.com" // Google's Maven repository
+
         }
+        maven { url "https://jitpack.io" }
         google()
         jcenter()
     }
