--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation 'agency.tango.android:material-intro-screen:0.0.5'
     implementation 'gr.pantrif:easy-android-splash-screen:0.0.1'
     implementation "com.android.support:cardview-v7:26.1.0"
+    implementation "com.google.firebase:firebase-database:11.8.0"
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.5'
 
 
 }
