--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
+
     defaultConfig {
         applicationId "com.example.shakt.baked"
 
@@ -46,6 +47,10 @@ dependencies {
     implementation "com.android.support:cardview-v7:26.1.0"
     implementation "com.google.firebase:firebase-database:11.8.0"
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.5'
+    compile 'com.google.firebase:firebase-storage:11.8.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+
 
 
 }
