--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.5'
     compile 'com.google.firebase:firebase-storage:11.8.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    compile 'net.alhazmy13.wordcloud:library:0.2.0-beta'
 
 
 
