--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,20 +32,25 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
-    implementation 'com.google.android.gms:play-services:11.8.0'
-    implementation 'com.google.android.gms:play-services-maps:11.8.0'
-    implementation 'com.google.firebase:firebase-auth:11.8.0'
+    implementation 'com.google.android.gms:play-services:12.0.0'
+    implementation 'com.google.android.gms:play-services-maps:12.0.0'
+    implementation 'com.google.firebase:firebase-auth:12.0.0'
     testCompile 'junit:junit:4.12'
     implementation 'agency.tango.android:material-intro-screen:0.0.5'
     implementation 'gr.pantrif:easy-android-splash-screen:0.0.1'
     implementation "com.android.support:cardview-v7:26.1.0"
-    implementation "com.google.firebase:firebase-database:11.8.0"
+    implementation "com.google.firebase:firebase-database:12.0.0"
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.5'
+//    implementation 'com.github.bumptech.glide:glide:4.6.1'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:support-v13:26.1.0'
+
 
 
 }
