--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,17 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:11.8.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     compile 'net.alhazmy13.wordcloud:library:0.2.0-beta'
+    // FirebaseUI for Firebase Realtime Database
+    implementation 'com.firebaseui:firebase-ui-database:3.3.0'
 
+// FirebaseUI for Cloud Firestore
+    implementation 'com.firebaseui:firebase-ui-firestore:3.3.0'
 
+// FirebaseUI for Firebase Auth
+    implementation 'com.firebaseui:firebase-ui-auth:3.3.0'
+
+// FirebaseUI for Cloud Storage
+    implementation 'com.firebaseui:firebase-ui-storage:3.3.0'
 
 
 }
