--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,10 +48,11 @@ dependencies {
     implementation "com.google.firebase:firebase-database:11.8.0"
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.5'
     compile 'com.google.firebase:firebase-storage:11.8.0'
+    compile 'com.google.firebase:firebase-auth:11.8.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     compile 'net.alhazmy13.wordcloud:library:0.2.0-beta'
-
-
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 
 
 }
