--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,11 +50,7 @@
             android:parentActivityName=".HomeActivity"
             android:theme="@style/AppTheme" />
         <activity android:name=".SplashScreenActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
         <activity android:name=".IntroActivity" />
@@ -62,16 +58,14 @@
             android:name=".RecommendationActivity"
             android:parentActivityName=".HomeActivity"
             android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
         </activity>
-
-        <activity android:name=".IntroActivity"></activity>
-        <activity
-            android:name=".RecommendationActivity"
-            android:parentActivityName=".HomeActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-  
-
+        <activity android:name=".PostView" />
         <activity
             android:name=".UserAccount"
             android:parentActivityName=".HomeActivity"
