--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     compile 'net.alhazmy13.wordcloud:library:0.2.0-beta'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.medyo:fancybuttons:1.8.4'
 
 
 }
