--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,23 +38,25 @@ dependencies {
     })
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
-    implementation 'com.google.android.gms:play-services:12.0.0'
-    implementation 'com.google.android.gms:play-services-maps:12.0.0'
-    implementation 'com.google.firebase:firebase-auth:12.0.0'
+    implementation 'com.google.android.gms:play-services:12.0.1'
+    implementation 'com.google.android.gms:play-services-maps:12.0.1'
+    implementation 'com.google.firebase:firebase-auth:12.0.1'
     testCompile 'junit:junit:4.12'
     implementation 'agency.tango.android:material-intro-screen:0.0.5'
     implementation 'gr.pantrif:easy-android-splash-screen:0.0.1'
     implementation "com.android.support:cardview-v7:26.1.0"
-    implementation "com.google.firebase:firebase-database:12.0.0"
+    implementation "com.google.firebase:firebase-database:12.0.1"
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.5'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:support-v13:26.1.0'
-    compile     'com.google.firebase:firebase-storage:12.0.0'
-    compile     'com.google.firebase:firebase-auth:12.0.0'
+    compile     'com.google.firebase:firebase-storage:12.0.1'
+    compile     'com.google.firebase:firebase-auth:12.0.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     compile 'net.alhazmy13.wordcloud:library:0.2.0-beta'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.medyo:fancybuttons:1.8.4'
+    implementation "com.google.firebase:firebase-core:12.0.1"
+    implementation "com.google.firebase:firebase-messaging:12.0.1"
 
 
 }
