--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,9 +42,10 @@
         <activity
             android:name=".HomeActivity"
             android:theme="@style/AppTheme.NoActionBar" >
-
-
         </activity>
+        <activity
+            android:name=".ProductDesc"
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
             android:name=".MapActivity"
@@ -53,6 +54,11 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".SplashScreenActivity">
 
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
         </activity>
         <activity android:name=".IntroActivity" />
@@ -60,11 +66,7 @@
             android:name=".RecommendationActivity"
             android:parentActivityName=".HomeActivity"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
         <activity android:name=".PostView" />
