--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,10 +42,11 @@
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
 
-      
+
         <activity
             android:name=".ProductDesc"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".MapActivity"
             android:label="Go Back"
@@ -53,19 +54,19 @@
             android:theme="@style/AppTheme" />
 
         <activity android:name=".SplashScreenActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
         </activity>
 
         <activity android:name=".IntroActivity" />
       
         <activity
             android:name=".RecommendationActivity"
+            android:label="Go Back"
             android:parentActivityName=".HomeActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
@@ -76,11 +77,7 @@
             android:name=".UserAccount"
             android:parentActivityName=".HomeActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".Reviews"
