--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,9 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.5'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:support-v13:26.1.0'
-    compile     'com.google.firebase:firebase-storage:12.0.1'
-    compile     'com.google.firebase:firebase-auth:12.0.1'
+    compile 'com.google.firebase:firebase-storage:12.0.1'
+    compile 'com.google.firebase:firebase-auth:12.0.1'
+    compile 'com.google.android.gms:play-services-auth:12.0.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     compile 'net.alhazmy13.wordcloud:library:0.2.0-beta'
     compile 'com.github.bumptech.glide:glide:3.7.0'
